--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "@ng-bootstrap/ng-bootstrap": "^3.2.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "d3": "^5.7.0",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.0.0",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~3.1.3",
     "@angular/cli": "~7.0.2",
+    "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
+    "@types/d3": "^5.0.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -46,6 +47,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~3.1.3"
   }
 }
