--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.2",
+    "@ng-select/ng-select": "^2.12.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
